# renewenergy

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
docs/data/: energy_test.csv  energy_train.csv  imported.csv
src/renewenergy/: clean_data.py  eda.py
tests/: settingup.py  targ.csv  test_cleaning_data.py  test_datareading.py  test_eda.py  test_impute_split.py  test_linear_regression.py  test_renewenergy.py  testing_data.csv
